--- a/PetHub/app/build.gradle
+++ b/PetHub/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -36,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     kapt 'androidx.lifecycle:lifecycle-compiler:2.4.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -53,4 +55,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-simplexml:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    def lifecycle_version = "2.0.0"
+
+
 }
